# MAGI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: default_config.yaml
docs/plans/: 2026-03-03-magi-design.md  2026-03-03-phase4-implementation.md
examples/: README.md  config.yaml  generate_example_data.py
examples/data/: metadata.tsv  standardized_bacteria.tsv  standardized_fungi.tsv  standardized_virus.tsv
recipe/: README.md  meta.yaml
src/magi/: __init__.py  cli.py  validate.py
src/magi/analysis/: __init__.py  cooccurrence.py  differential.py  diversity.py
src/magi/assembly/: __init__.py  assemblers.py
src/magi/benchmarking/: __init__.py  metrics.py  mock_communities.py
src/magi/classify/: __init__.py  bacteriome.py  mycobiome.py  virome.py
src/magi/db/: __init__.py  integrity.py  manager.py
src/magi/metadata/: __init__.py  correlation.py
src/magi/qc/: __init__.py  filtering.py  host_removal.py  trimming.py
src/magi/reporting/: __init__.py  biplot_data.py  dashboard.py  figures.py
src/magi/unifier/: __init__.py  matrix.py  normalize.py  standardize.py
tests/: test_analysis.py  test_assembly.py  test_benchmarking.py  test_classify.py  test_cli.py  test_db.py  test_integrity.py  test_metadata.py  test_qc.py  test_reporting.py  test_unifier.py  test_validate.py
tests/integration/: conftest.py  test_end_to_end.py  test_pipeline_chain.py
workflow/: Snakefile
workflow/envs/: base.yaml  genomad.yaml  kraken2.yaml  qc.yaml  spieceasi.yaml
workflow/profiles/: README.md
workflow/profiles/sge/: config.yaml
workflow/profiles/slurm/: config.yaml
workflow/rules/: analysis.smk  assembly.smk  classify.smk  metadata.smk  qc.smk  reporting.smk  unifier.smk
