[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magi-metagenomics"
version = "0.1.0"
description = "Multi-kingdom Analysis of Genomic Interactions"
authors = [
    { name = "Edgardo Rosado Ramos" },
]
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click",
    "pyyaml",
    "pydantic>=2.0",
    "pandas",
    "numpy",
    "scipy",
    "scikit-bio",
    "plotly",
    "matplotlib",
    "seaborn",
    "networkx",
    "scikit-learn",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/edgar2-1/MAGI"
Repository = "https://github.com/edgar2-1/MAGI"
Issues = "https://github.com/edgar2-1/MAGI/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pytest-cov",
]

[project.scripts]
magi = "magi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/magi"]

[tool.hatch.build.targets.wheel.force-include]
"workflow" = "magi/workflow"

[tool.ruff]
line-length = 99
